feat: auth setup complete

--- a/apps/ecom-backend/src/main/resources/application.yml
+++ b/apps/ecom-backend/src/main/resources/application.yml
@@ -46,13 +46,13 @@ spring:
     default-schema: ecommerce
     contexts: dev
   #    drop-first: true
-#  security:
-#    oauth2:
-#      resourceserver:
-#        jwt:
-#          issuer-uri: https://codecake.kinde.com
-#          jwk-set-uri: https://codecake.kinde.com/.well-known/jwks
-#          audiences: http://localhost:8080/api
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://prabal.kinde.com
+          jwk-set-uri: https://prabal.kinde.com/.well-known/jwks
+          audiences: http://localhost:8080/api
   devtools:
     restart:
       enabled: false
@@ -76,11 +76,11 @@ application:
     exposed-headers: "*"
     allow-credentials: false
     max-age: 300
-#  kinde:
-#    api: https://codecake.kinde.com
-#    client-id: ${KINDE_CLIENT_ID}
-#    client-secret: ${KINDE_CLIENT_SECRET}
-#    audience: https://codecake.kinde.com/api
+  kinde:
+    api: https://prabal.kinde.com
+    client-id: ${KINDE_CLIENT_ID}
+    client-secret: ${KINDE_CLIENT_SECRET}
+    audience: https://prabal.kinde.com/api
 #  stripe:
 #    api-key: ${STRIPE_API_KEY}
 #    webhook-secret: ${STRIPE_WEBHOOK_SECRET}
