feat: auth setup frontend complete

--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@ng-web-apis/common": "^4.12.0",
+    "@ng-web-apis/universal": "^4.12.0",
+    "@tanstack/angular-query-devtools-experimental": "^5.77.2",
+    "@tanstack/angular-query-experimental": "^5.77.2",
+    "angular-auth-oidc-client": "^19.0.1",
     "express": "~4.18.2",
     "install": "^0.13.0",
+    "ngxtension": "^5.0.0",
     "npm": "^10.9.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
