--- a/apps/ecom-frontend/project.json
+++ b/apps/ecom-frontend/project.json
@@ -44,12 +44,24 @@
               "maximumError": "4kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "fileReplacements": [
+            {
+              "replace": "apps/ecom-frontend/src/environment/environment.ts",
+              "with": "apps/ecom-frontend/src/environment/environment.prod.ts"
+            }
+          ]
         },
         "development": {
           "optimization": false,
           "extractLicenses": false,
-          "sourceMap": true
+          "sourceMap": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/ecom-frontend/src/environment/environment.ts",
+              "with": "apps/ecom-frontend/src/environment/environment.dev.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
