--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@ng-web-apis/common": "^4.12.0",
     "@ng-web-apis/universal": "^4.12.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tanstack/angular-query-devtools-experimental": "^5.77.2",
     "@tanstack/angular-query-experimental": "^5.77.2",
     "angular-auth-oidc-client": "^19.0.1",
     "express": "~4.18.2",
     "install": "^0.13.0",
+    "ngx-stripe": "^18.1.0",
     "ngxtension": "^5.0.0",
     "npm": "^10.9.2",
     "rxjs": "~7.8.0",
